# gamarr

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: gamarr.yml
docs/agent/plans/: 2026-07-24-cloudscraper-freegog.md
docs/agent/specs/: 2026-07-24-cloudscraper-freegog-design.md
docs/plans/: 2026-06-17-config-keyed-source-list.md  2026-06-17-dodi-source-support.md  2026-06-18-clear-cache.md  2026-07-06-log-colour-and-caps-plan.md  2026-07-06-logging-overhaul-plan.md  2026-07-06-year-specific-browsing-plan.md  2026-07-07-max-pages-rename-plan.md  2026-07-08-search-mode-plan.md  2026-07-08-search-mode-test-fix-plan.md  2026-07-14-dlc-matching.md  2026-07-14-expansions-synonym.md  2026-07-14-post-processing-plan.md  2026-07-14-token-overlap.md  2026-07-15-debug-match-logging.md
docs/specs/: 2026-06-17-config-keyed-source-list-design.md  2026-06-17-dodi-source-support-design.md  2026-06-18-clear-cache-design.md  2026-07-06-config-enum-validation-design.md  2026-07-06-log-colour-and-caps-design.md  2026-07-06-logging-overhaul-design.md  2026-07-06-year-specific-browsing-design.md  2026-07-07-max-pages-rename-design.md  2026-07-08-search-mode-design.md  2026-07-14-dlc-matching-design.md  2026-07-14-expansions-synonym-design.md  2026-07-14-post-processing-design.md  2026-07-14-token-overlap-design.md  2026-07-15-debug-match-logging-design.md
docs/superpowers/plans/: 2026-06-04-gamarr-implementation.md  2026-06-05-library-scanning-implementation.md  2026-06-05-metacritic-centric-acquisition.md  2026-06-05-rich-logging-implementation.md  2026-06-08-cutoff-weeks.md  2026-06-08-reject-genre.md  2026-06-08-remove-max-score-checks.md  2026-06-10-age-recheck-weeks-v2.md  2026-06-10-age-recheck-weeks.md  2026-06-10-torrent-rename-plan.md
docs/superpowers/specs/: 2026-06-04-gamarr-design.md  2026-06-05-library-scanning-design.md  2026-06-05-metacritic-centric-acquisition-design.md  2026-06-05-rich-logging-design.md  2026-06-07-cache-merge-design.md  2026-06-08-cutoff-weeks-design.md  2026-06-08-fitgirl-pending-days-design.md  2026-06-08-reject-genre-design.md  2026-06-08-reject-title-design.md  2026-06-08-remove-max-score-checks-design.md  2026-06-10-steam-source-design.md  2026-06-10-torrent-rename-design.md
src/gamarr/: cli.py  config.py  database.py  file_utils.py  library.py  logger.py  metacritic.py  metacritic_cache.py  models.py  notifications.py  pipeline.py  post_processor.py  qbittorrent.py  scheduler.py  utils.py
src/gamarr/sources/: __init__.py  dodi.py  fitgirl.py  freegog.py
tests/: conftest.py
tests/integration/: test_clear_cache.py
tests/unit/: test_cli.py  test_config.py  test_database.py  test_dodi.py  test_file_utils.py  test_fitgirl.py  test_freegog.py  test_library.py  test_logger.py  test_metacritic.py  test_models.py  test_notifications.py  test_pipeline.py  test_post_processor.py  test_qbittorrent.py  test_readme_accuracy.py  test_scheduler.py  test_utils.py
