[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamarr"
version = "1.0.2"
description = "Metadata game downloader - torrent metadata harvester"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "dev", email = "megalith01@gmail.com"}
]
keywords = ["game", "torrent", "metadata", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "apscheduler",
    "backoff",
    "click",
    "loguru",
    "apprise",
    "pyyaml",
    "requests",
    "sqlalchemy",
    "urllib3",
    "pydantic>=2.0.0",
    "qbittorrent-api",
    "xmltodict",
    "beautifulsoup4",
    "lxml",
    "curl-cffi>=0.15.0",
]

[project.scripts]
gamarr = "gamarr.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["S101"]      # assert usage in tests

[tool.ruff.lint.isort]
known-first-party = ["gamarr"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["backoff"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["qbittorrentapi", "qbittorrentapi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apprise", "apprise.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["xmltodict"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apscheduler", "apscheduler.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bs4", "bs4.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["curl_cffi", "curl_cffi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sqlalchemy", "sqlalchemy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gamarr.notifications"]
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "7.0"
addopts = """
    -ra
    --strict-markers
    --strict-config
    --cov=src/gamarr
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --cov-fail-under=95
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-crap @ git+https://github.com/binhex/pytest-crap.git@v0.3.1",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.0",
    "pre-commit",
    "mypy",
    "ruff"
]
