[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamarr"
version = "1.1.13"
description = "Metadata game downloader - torrent metadata harvester"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "dev", email = "megalith01@gmail.com"}
]
keywords = ["game", "torrent", "metadata", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "apscheduler",
    "click",
    "loguru",
    "apprise",
    "pyyaml",
    "requests",
    "sqlalchemy",
    "urllib3",
    "pydantic>=2.0.0",
    "qbittorrent-api",
    "beautifulsoup4",
]

[project.scripts]
gamarr = "gamarr.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["S101"]      # assert usage in tests

[tool.ruff.lint.isort]
known-first-party = ["gamarr"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["apscheduler", "apscheduler.*", "apprise", "qbittorrentapi"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-crap @ git+https://github.com/binhex/pytest-crap.git@v0.3.1",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.0",
    "pre-commit",
    "mypy",
    "ruff"
]
